feito 'alterar gitignore para ignorar todos os arquivos de extensão .xls em commits'

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /tests/HashMapEstado/nbproject/private/
 /tests/HashMapEstado/build/
 /dist/
+/tests/Date/nbproject/private/
+/tests/Date/build/
+/*.xls
